:memo: add statement

--- a/Projet8_MAP361.ipynb
+++ b/Projet8_MAP361.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71028748",
+   "id": "f2f7bd1e",
    "metadata": {},
    "source": [
-    "#Projet 8: Propriétés spatiales des tables de hachage universelles\n",
-    "Élèves: Gabriel CARVALH"
+    "# Projet 8: Propriétés spatiales des tables de hachage universelles\n",
+    "**Élèves**: Gabriel CARVALHO & Yong MOK"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf9053d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
