--- a/CARVALHO_MOK_8.ipynb
+++ b/CARVALHO_MOK_8.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b377fee",
+   "id": "9232ddda",
    "metadata": {},
    "source": [
     "## <font color='289C4E'>Table de matières<font><a class='anchor' id='top'></a>\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "743b928c",
+   "id": "921b6bcf",
    "metadata": {},
    "source": [
     "<h3 align=\"center\"> <font color='blue'>Python Imports</font></h3> <a class=\"anchor\" id=\"imports\"></a>"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f04b7aa",
+   "id": "b1db50cb",
    "metadata": {},
    "source": [
     "Dans cette section, on va importer tous les paquets qu'on ira utiliser plus tard."
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c6ca5ab8",
+   "id": "77740a74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42cbdc11",
+   "id": "29814acf",
    "metadata": {},
    "source": [
     "<h3 align=\"center\"> <font color='blue'>Question S1</font></h3> <a class=\"anchor\" id=\"S1\"></a>"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e688083",
+   "id": "3feab9bd",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20471693",
+   "id": "9a0e27a0",
    "metadata": {},
    "source": [
     "Pour ajouter une donnée $d$ dans la table de hachage $t$, on va:\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8a52c411",
+   "id": "88ac036a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d97ad7f7",
+   "id": "9ae71074",
    "metadata": {},
    "source": [
     "Dans l'exemple, on note que $h(7) = 1$. Donc, la donnée $7$ doit être ajouté à l'alvéole $t[1]$."
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "27755a48",
+   "id": "c74dbbc0",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403d0dae",
+   "id": "8a575db9",
    "metadata": {},
    "source": [
     "<h3 align=\"center\"> <font color='blue'>Question S2</font></h3> <a class=\"anchor\" id=\"S2\"></a>"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31eb94a0",
+   "id": "8ab96934",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dddc2917",
+   "id": "4d287aa7",
    "metadata": {},
    "source": [
     "Pour chercher une donnée $d$ dans la table de hachage $t$, on va:\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "02d42d5a",
+   "id": "96006a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7aaa658",
+   "id": "ba945ce0",
    "metadata": {},
    "source": [
     "Dans l'exemple, on note que $7$ et $18$ sont présentes dans la table de hachage, mais $15$ ne l'est pas."
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9853ffb9",
+   "id": "dccb4453",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "07b7e594",
+   "id": "ddb82b35",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2ad1ad40",
+   "id": "5250a89d",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57d022f",
+   "id": "36c6c45f",
    "metadata": {},
    "source": [
     "<h3 align=\"center\"> <font color='blue'>Question S3</font></h3> <a class=\"anchor\" id=\"S3\"></a>"
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8b8f19",
+   "id": "c40c4904",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -264,24 +264,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ab40c1b",
+   "cell_type": "markdown",
+   "id": "4eac73fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Pour construir la table de hachage $t$, on va:\n",
+    "1. initialiser une table vide avec $5$ al\n",
+    "2. utiliser la fonction *list.index()* pour trouver la donnée $d$ si elle est présente.\n",
+    "3. si la donnée a été trouvé, on retorne **True**, sinon on retorne **False**."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d863877",
+   "id": "cfd38d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def construirTableHachage(donnees,\n",
+    "                          fonctionHachage):\n",
+    "    tableHachage = [[] for i in range(5)]\n",
+    "    for donnee in donnees:\n",
+    "        ajouterDonnee(tableHachage)\n",
+    "    return tableHachage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cac31ac",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "44f5dba0",
+   "id": "26cc586f",
    "metadata": {},
    "source": [
     "<h3 align=\"center\"> <font color='blue'>Reférences</font></h3> <a class=\"anchor\" id=\"myrefs\"></a>"
@@ -289,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "951ec326",
+   "id": "1f431d76",
    "metadata": {},
    "source": []
   }
