--- a/CARVALHO_MOK_8.ipynb
+++ b/CARVALHO_MOK_8.ipynb
@@ -295,7 +295,25 @@
    "id": "2cac31ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def insert_into_hash_table(hash_table, h, data):\n",
+    "    index = h(data)\n",
+    "    if data not in hash_table[index]:\n",
+    "        hash_table[index].append(data)\n",
+    "\n",
+    "# Liste d'entiers à insérer\n",
+    "data_list = [5, 1, 7, 6, 5, 9, 15, 0, 18]\n",
+    "\n",
+    "# Construction de la table de hachage\n",
+    "hash_table = [[] for _ in range(5)]\n",
+    "\n",
+    "# Insertion successive des données dans la table de hachage\n",
+    "for data in data_list:\n",
+    "    insert_into_hash_table(hash_table, h, data)\n",
+    "\n",
+    "# Affichage de la table de hachage\n",
+    "print(hash_table)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
