:memo: test avec Yong

--- a/CARVALHO_MOK_8.ipynb
+++ b/CARVALHO_MOK_8.ipynb
@@ -325,6 +325,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "536a1b6a",
+   "metadata": {},
+   "source": [
+    "<h3 align=\"center\"> <font color='blue'>Question S3</font></h3> <a class=\"anchor\" id=\"S3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26cc586f",
    "metadata": {},
    "source": [
@@ -354,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
